Picture-in-Picture: stop video in pip when starting a new one in page.

The video is now notified that it is no longer in PIP which allows it
to cleanup its UI.

Bug: 845561
Change-Id: I046da987e51f2568c6af05a3c51a7c0124a6abbe
Reviewed-on: https://chromium-review.googlesource.com/1067748
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561718}
Former-commit-id: 503fae899e5e4d93c513cc79598cafda46c51164